--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,7 @@
 <h1>Piglatin Translator!</h1>
 
-<form>
-
-    <input type="text" />
+<form action="{% url 'translate' %}">
+    <input type="text" name="originaltext" />
     <br>
     <input type="submit" value="Translate" / />
 
