--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,25 @@
-<h1>Piglatin Translator!</h1>
+<!DOCTYPE html>
+<html>
 
-<form action="{% url 'translate' %}">
-    <input type="text" name="originaltext" />
+<head>
+    <meta charset="utf-8">
+    <title>Home | Translator</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+</head>
+
+<body>
+
+    <h1>Piglatin Translator!</h1>
+
+    <form action="{% url 'translate' %}">
+        <input type="text" name="originaltext" />
+        <br>
+        <input type="submit" value="Translate" / />
+    </form>
     <br>
-    <input type="submit" value="Translate" / />
+    <br>
+    <a href="{% url 'about' %}">About</a>
 
-</form>
+</body>
+
+</html>
