cleaned up html templates with jinja

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title>About | Translator</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-</head>
-
-<body>
-    <h1>About</h1>
+{% extends 'home.html' %}
+    {% block content %}
+    <h3>About</h3>
     <p>A simple app built on the Django Framework to translate a given phrase into piglatin.</p>
-
-</body>
-
-</html>
+    {% endblock %}
