--- a/templates/translate.html
+++ b/templates/translate.html
@@ -1,7 +1,20 @@
 {% extends 'home.html' %}
 
-{% block translation %}
-<h3>Original:</h3> {{ original }}
-
-<h3>Translation</h3> {{ translation }}
-{% endblock %}
+    {% block translation %}
+        <div class="col-md-6">
+            <div class="card">
+                <h3 class="card-header">Original:</h3>
+                <div class="card-body">
+                    <p class="card-text">{{ original }}</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card">
+                <h3 class="card-header">Translation</h3>
+                <div class="card-body">
+                    <p class="card-text">{{ translation }}</p>
+                </div>
+            </div>
+        </div>
+    {% endblock %}
