--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,6 @@
-{% extends 'home.html' %}
+<!--{% extends 'home.html' %}
     {% block content %}
         <h3>About</h3>
-        <p>A simple app built on the Django Framework to translate a given phrase into piglatin.</p>
+            <p>A simple app built on the Django Framework to translate a given phrase into piglatin.</p>
     {% endblock %}
+-->
