--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        Translator
+        Home | Translator
     </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -39,7 +39,7 @@
 
         <br>
 
-        <div class="row">
+        <div class="">
             <footer class="card text-center">
                 <div class="card-body">
                     <h3 class="card-title">About</h3>
